web-app running changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
 
       <h2 class="box1">Edible</h2>
       <p><span class="o">O</span> <span class="r">R</span></p>
-      <h2 class="box3">Predict by yourself</h2>
+      <h2 class="box3"><a href="predict">Predict by yourself</a></h2>
     </div>
 
     <div
