code before final touch

--- a/templates/form.html
+++ b/templates/form.html
@@ -30,7 +30,7 @@
         <option value="n">brown</option>
         <option value="b">buff</option>
         <option value="c">cinnamon</option>
-        <option value="g">grey</option>
+        <option value="g">gray</option>
         <option value="r">green</option>
         <option value="p">pink</option>
         <option value="u">purple</option>
@@ -94,7 +94,7 @@
         <option value="n">brown</option>
         <option value="b">buff</option>
         <option value="h">chocolate</option>
-        <option value="g">grey</option>
+        <option value="g">gray</option>
         <option value="r">green</option>
         <option value="o">orange</option>
         <option value="p">pink</option>
@@ -150,7 +150,7 @@
         <option value="n">brown</option>
         <option value="b">buff</option>
         <option value="c">cinnamon</option>
-        <option value="g">grey</option>
+        <option value="g">gray</option>
         <option value="o">orange</option>
         <option value="p">pink</option>
         <option value="e">red</option>
@@ -165,7 +165,7 @@
         <option value="n">brown</option>
         <option value="b">buff</option>
         <option value="c">cinnamon</option>
-        <option value="g">grey</option>
+        <option value="g">gray</option>
         <option value="o">orange</option>
         <option value="p">pink</option>
         <option value="e">red</option>
