--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,12 @@
     em {
       font-size: 50px;
       position: absolute;
-      left: 360px;
-      font-family: "arial";
+      left: 380px;
+      background-image: linear-gradient(to right, yellow, purple);
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      background-clip: text;
+      color: transparent;
     }
     body {
       background-color: black;
@@ -83,13 +87,17 @@
     }
   </style>
   <body>
-    <h1><em>Welcome To The Mushroom Test</em></h1>
-    <img src="edible.jpg" alt="Edeible Mushroom Image"/ id="edible">
+    <h1><em>Welcome to Mushroom Test</em></h1>
+    <img
+    src="https://media.istockphoto.com/id/1276597176/photo/button-mushrooms.jpg?s=612x612&w=0&k=20&c=ilDpArGu1tDBzSAZR8zxr5VXjet7tb7U7Erx-vsRY4E="
+    alt="Edeible Mushroom Image"/ id="edible">
     <h2 id="ed">Edible</h2>
-    <img src="poison.jpg" alt="Poisonous Mushroom Image" / id="poison" >
+    <img
+    src="https://www.mushroom-appreciation.com/wp-content/uploads/2022/02/amanita-feature.jpg"
+    alt="Poisonous Mushroom Image" / id="poison" >
     <h2 id="pi">Poisonous</h2>
     <h1 id="or">OR</h1>
-    <a href="predict" id="predict">CHECK</a>
+    <a href="predict" id="predict">TEST</a>
   </body>
   <footer>Created By Ayush Gandhi</footer>
 </html>
